# UdCap-Community-HandDriver-Core

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ar1_linear/: CMakeLists.txt
ar1_linear/src/: AR1Linear.hpp  AR1LinearAA.cpp  AR1LinearAD.cpp  AR1LinearAE.cpp  AR1LinearAG.cpp
serial-reborn/: CMakeLists.txt
serial-reborn/src/: BoostHelper.hpp  PortAccessor.cpp  PortAccessor.h  SerialCommon.h  UsbEnumerate.cpp  UsbEnumerate.h
src/: BoostHelper.cpp  BoostHelper.hpp  CorePref.cpp  CorePref.h  PortAccessor.h  UdCapProbe.cpp  UdCapProbe.h  UdCapV1Core.cpp  UdCapV1Core.h  UsbEnumerate.cpp  UsbEnumerate.h  main.cpp
test/: main.cpp
